# backgroundwindow

./: .buildconfig  LICENSE  README.md  extension.js  meson.build  metadata.json  package-lock.json  package.json
schemas/: gschemas.compiled  org.gnome.shell.extensions.backgroundwindow.gschema.xml
